# twitch-monkey

./: .env.example  .gitignore  README.md  compare_accuracy.py  download_xqc_logs.py  extract_match.py  grep_logs.py  grep_logs_substring.py  models.py  pyproject.toml  query_logs.py  sort_messages.py  turn_into_words.py
archive/full files (completed stories)/: xqc_r_and_j.txt
archive/grep files (unique words)/: rj_grep.txt
archive/missing words/: romeo_and_juliet.txt
archive/og files/: hamlet.txt  macbeth.txt  romeo-and-juliet.txt
archive/singleline files/: hamlet_singleline.txt  macbeth_singleline.txt
full files (completed stories)/: xqc_hamlet.txt  xqc_macbeth.txt
grep files (unique words)/: bible_grep.txt  hamlet_grep.txt  macbeth_grep.txt
missing words/: bible.txt  hamlet.txt  macbeth.txt
singleline files/: bible_singleline.txt  r_and_j_singleline.txt
